fixed footer img showing on mobile

--- a/styles.css
+++ b/styles.css
@@ -291,7 +291,7 @@ transition: transform 0.4s ease-in-out;
         flex-direction: column;
     }
 
-    .footer-img-wrapper{
+    footer .img-link{
         display: none;
     }
 }
